<resources>

    <string name="app_name">Binaa \n (حجز شقق و فنادق و سيارات القاهره)</string>
    <!-- Default screen margins, per the Android Design guidelines. -->

    <string name="number">000000</string>
    <string name="description">3 Bedrooms (1 master), 3 bathrooms, kitchen, lounge, salon, (60 m2) terrace with garden, Central airconditioner </string>
    <string name="facebook_link">facebook link</string>
    <string name="twitter_link">twitter link</string>
    <string name="instagram_link">instagram link</string>
    <string name="property_code">Code: </string>
    <string name="price">1000000 EGP</string>
    <string name="for_more_info">For more information and reserve: </string>
    <string name="or">Or</string>
    <string name="call_customer_service">Call</string>
    <string name="address_">Address: </string>
    <string name="phone_">Phone: </string>
    <string name="who_we_are">Who are we?</string>
    <string name="app_icon">app_icon</string>
    <string name="egp"> EGP</string>
    <string name="save_icon">Save Icon</string>
    <string name="slogan">Booking apartments,cars and hotels Cairo</string>
    <string name="related">Related: </string>
    <string name="en">En</string>
    <string name="ar">Ar</string>
    <string name="details">Details</string>
    <string name="area">area: </string>
    <string name="bedrooms">bedrooms: </string>
    <string name="number_of_bedrooms">Number of Bedrooms</string>
    <string name="bathrooms">bathrooms: </string>
    <string name="m_">m²</string>
    <string name="min_price">Minimum Price</string>
    <string name="max_price">Maxmum Price</string>
    <string name="min_price_hotel">Minimum Price \ USD</string>
    <string name="max_price_hotel">Maxmum Price \ USD</string>
    <string name="search">Search</string>
    <string name="no_result">No results for this data</string>
    <string name="coming_soon">Coming Soon…</string>
    <string name="apartments">Apartments</string>
    <string name="web_site_">Web Site: </string>
    <string name="choose_number">Choose number</string>
    <string name="book">Book</string>
    <string name="name">Name</string>
    <string name="country">Country</string>
    <string name="phone">Phone</string>
    <string name="passport">Passport Number</string>
    <string name="email">Email</string>
    <string name="Want_driver">I Want a driver</string>
    <string name="Want_travel">I Want a travel program</string>
    <string name="PickupFromAirport">I need a Pickup from the Airport</string>
    <string name="RentCar">I Want to Rent a car</string>
    <string name="bookApartment">Book Apartment Now</string>
    <string name="bookCar">Book Car Now</string>
    <string name="bookHotel">Book Hotel Now</string>
    <string name="emailValidation">Mail is not valid format</string>
    <string name="nameValidation">Please write your name</string>
    <string name="countryValidation">Please write your Country</string>
    <string name="phoneValidation">Please write your Phone number</string>
    <string name="passportValidation">Please write your Passport Number</string>
    <string name="arrivalDateValidation">Please enter the Arrival Date</string>
    <string name="leaveDateValidation">Please enter the Leave Date</string>
    <string name="arrivalDate">Arrival Date</string>
    <string name="leaveDate">Leave Date</string>
    <string name="messageApartment">Apartment Reservation has been sent, Please check your email</string>
    <string name="messageHotel">Hotel Reservation has been sent, Please check your email</string>
    <string name="messageCar">Car Reservation has been sent, Please check your email</string>
    <string name="navigation_drawer_open">Car Reservation has been sent, Please check your email</string>
    <string name="navigation_drawer_close">Car Reservation has been sent, Please check your email</string>
    <string name="close">Close</string>
    <string name="properties_offers">Properties Offers</string>
    <string name="hotels_offers">Hotels Offers</string>
    <string name="dolar">$</string>
    <string name="including">\n Including transfers</string>

    <string-array name="slideMenuItems">
        <item>Home</item>
        <item>Offers</item>
        <item>Services</item>
        <item>Privacy Policy</item>
        <item>About Us</item>
        <item>Contact Us</item>
    </string-array>

    <string-array name="home_tabs_text">
        <item>Apartments</item>
        <item>Cars</item>
        <item>Hotels</item>
    </string-array>

    <string-array name="home_tabs_icons_white">
        <item>@drawable/ic_properties</item>
        <item>@drawable/ic_cars</item>
        <item>@drawable/ic_hotels</item>
    </string-array>

    <string-array name="home_tabs_icons_gray">
        <item>@drawable/ic_properties_gray</item>
        <item>@drawable/ic_cars_gray</item>
        <item>@drawable/ic_hotels_gray</item>
    </string-array>
</resources>


