<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:tag="layout">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_margin="10dp">

        <LinearLayout
            android:id="@+id/LinearLayoutFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rect_whitefa_gray_stroke"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <com.binaa.android.binaa.views.TextViewRobotoRegular
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ellipsize="middle"
                android:gravity="center|top"
                android:maxLines="2"
                android:text="@string/book"
                android:textColor="@color/gray"
                android:textSize="@dimen/textSizeLarge" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rect_white_blue_stroke"
                android:hint="@string/name"
                android:inputType="text"
                android:maxLines="1"
                android:padding="5dp"
                android:textColor="@drawable/selector_text"
                android:textColorHint="@color/grayHint"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/textSizeSmall" />

            <EditText
                android:id="@+id/editTextCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rect_white_blue_stroke"
                android:hint="@string/country"
                android:inputType="text"
                android:maxLines="1"
                android:padding="5dp"
                android:textColor="@drawable/selector_text"
                android:textColorHint="@color/grayHint"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/textSizeSmall" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rect_white_blue_stroke"
                android:hint="@string/phone"
                android:inputType="number"
                android:maxLines="1"
                android:padding="5dp"
                android:textColor="@drawable/selector_text"
                android:textColorHint="@color/grayHint"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/textSizeSmall"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/editTextPassport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rect_white_blue_stroke"
                android:hint="@string/passport"
                android:inputType="number"
                android:maxLines="1"
                android:padding="5dp"
                android:textColor="@drawable/selector_text"
                android:textColorHint="@color/grayHint"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/textSizeSmall" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rect_white_blue_stroke"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="5dp"
                android:textColor="@drawable/selector_text"
                android:textColorHint="@color/grayHint"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/textSizeSmall" />

            <TextView
                android:id="@+id/textViewArrivalDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rect_white_blue_stroke"
                android:maxLines="1"
                android:padding="5dp"
                android:text="@string/arrivalDate"
                android:textColor="@color/grayHint"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/textSizeSmall"
                tools:ignore="TextFields" />

            <TextView
                android:id="@+id/textViewLeaveDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rect_white_blue_stroke"
                android:maxLines="1"
                android:padding="5dp"
                android:text="@string/leaveDate"
                android:textColor="@color/grayHint"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/textSizeSmall"
                tools:ignore="TextFields" />

            <LinearLayout
                android:id="@+id/linearLayoutCar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <CheckBox
                    android:id="@+id/checkboxWantDriver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:text="@string/Want_driver"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/textSizeSmall"
                    tools:ignore="TextFields" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <CheckBox
                    android:id="@+id/checkboxWantTravel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:text="@string/Want_travel"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/textSizeSmall"
                    tools:ignore="TextFields" />

                <CheckBox
                    android:id="@+id/checkboxPickupFromAirport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:text="@string/PickupFromAirport"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/textSizeSmall"
                    tools:ignore="TextFields" />

                <CheckBox
                    android:id="@+id/checkboxRentCar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:text="@string/RentCar"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/textSizeSmall"
                    tools:ignore="TextFields" />

            </LinearLayout>

            <com.binaa.android.binaa.views.ButtonRobotoRegular
                android:id="@+id/buttonReserve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/save_icon"
                android:text="@string/book"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/textSizeSmall" />

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/relativeLayoutLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="@color/blackTransparent"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true" />
    </RelativeLayout>
</RelativeLayout>
