<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayLight2">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v4.view.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <com.binaa.android.binaa.views.PagerSlidingTabStrip
                android:id="@+id/pagerSlidingTabStrip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/viewPager"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:minHeight="10dp"
                android:minWidth="30dp"
                android:tag="sw320dp" />

            <com.binaa.android.binaa.views.TextViewRobotoRegular
                android:id="@+id/textViewPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp"
                android:background="@color/blue60"
                android:gravity="center"
                android:lines="1"
                android:paddingBottom="10dp"
                android:paddingEnd="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="15dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:textColor="@color/white"
                android:textSize="@dimen/textSizeXSmall"
                tools:ignore="RelativeOverlap"
                tools:text="@string/price" />

            <com.binaa.android.binaa.views.TextViewRobotoRegular
                android:id="@+id/textViewCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/relativeLayout1"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@color/red"
                android:gravity="center"
                android:lines="1"
                android:paddingBottom="10dp"
                android:paddingEnd="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="20dp"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:textColor="@color/white"
                android:textSize="@dimen/textSizeXSmall"
                tools:text="@string/property_code" />


            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/viewPager"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:layoutDirection="ltr"
                tools:targetApi="jelly_bean_mr1">

                <RelativeLayout
                    android:id="@+id/relativeLayoutDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    android:visibility="visible">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="20dp"
                        tools:ignore="RelativeOverlap,RtlCompat">

                        <ImageView
                            android:id="@+id/imageViewArea"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerHorizontal="true"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/ic_area" />

                        <com.binaa.android.binaa.views.TextViewRobotoLight
                            android:id="@+id/textViewArea"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/imageViewArea"
                            android:layout_centerHorizontal="true"
                            android:text="@string/area" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true">

                        <ImageView
                            android:id="@+id/imageViewBedrooms"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerHorizontal="true"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/ic_bedrooms" />

                        <com.binaa.android.binaa.views.TextViewRobotoLight
                            android:id="@+id/textViewBedrooms"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/imageViewBedrooms"
                            android:layout_centerHorizontal="true"
                            android:text="@string/bedrooms" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="20dp"
                        tools:ignore="RelativeOverlap,RtlCompat">

                        <ImageView
                            android:id="@+id/imageViewBathrooms"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerHorizontal="true"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/ic_bathrooms" />

                        <com.binaa.android.binaa.views.TextViewRobotoLight
                            android:id="@+id/textViewBathrooms"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/imageViewBathrooms"
                            android:layout_centerHorizontal="true"
                            android:text="@string/bathrooms" />
                    </RelativeLayout>


                </RelativeLayout>

                <com.binaa.android.binaa.views.TextViewRobotoLight
                    android:id="@+id/textViewDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/relativeLayoutDetails"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:padding="5dp"
                    android:textColor="@color/grayDark"
                    android:textSize="@dimen/textSizeLarge"
                    tools:text="@string/description" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout1"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@color/white">

                <com.binaa.android.binaa.views.TextViewRobotoRegular
                    android:id="@+id/textViewTitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="10dp"
                    android:ellipsize="end"
                    android:gravity="start|top"
                    android:maxLines="2"
                    android:text="@string/for_more_info"
                    android:textColor="@color/grayDark"
                    android:textSize="@dimen/textSizeLarge" />

                <LinearLayout
                    android:id="@+id/LinearLayoutSocial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewTitle2"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewFacebook"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="20dp"
                        android:contentDescription="@string/facebook_link"
                        android:src="@drawable/facebook_links" />

                    <ImageView
                        android:id="@+id/imageViewTwitter"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="20dp"
                        android:contentDescription="@string/twitter_link"
                        android:src="@drawable/twitter_links" />

                    <ImageView
                        android:id="@+id/imageViewInstagram"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="20dp"
                        android:contentDescription="@string/instagram_link"
                        android:src="@drawable/instagram_links" />

                </LinearLayout>

                <com.binaa.android.binaa.views.TextViewRobotoRegular
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/LinearLayoutSocial"
                    android:layout_centerHorizontal="true"
                    android:ellipsize="end"
                    android:gravity="start|top"
                    android:maxLines="2"
                    android:text="@string/or"
                    android:textColor="@color/grayDark"
                    android:textSize="@dimen/textSizeLarge" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView"
                    android:layout_centerHorizontal="true">

                    <com.binaa.android.binaa.views.ButtonRobotoRegular
                        android:id="@+id/buttonCall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:layout_toEndOf="@+id/view"
                        android:layout_toRightOf="@+id/view"
                        android:autoLink="phone"
                        android:background="@drawable/selector_background_button"
                        android:contentDescription="@string/save_icon"
                        android:padding="10dp"
                        android:text="@string/call_customer_service"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/textSizeSmall" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="5dp"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true" />

                    <com.binaa.android.binaa.views.ButtonRobotoRegular
                        android:id="@+id/buttonReserve"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:layout_toLeftOf="@+id/view"
                        android:layout_toStartOf="@+id/view"
                        android:background="@drawable/selector_background_button"
                        android:contentDescription="@string/save_icon"
                        android:padding="10dp"
                        android:text="@string/book"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/textSizeSmall"
                        tools:ignore="RelativeOverlap" />
                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayoutRelated"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/relativeLayout2"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:visibility="gone">

                <com.binaa.android.binaa.views.TextViewRobotoRegular
                    android:id="@+id/textViewTitle3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="10dp"
                    android:ellipsize="end"
                    android:gravity="start|top"
                    android:maxLines="2"
                    android:text="@string/related"
                    android:textColor="@color/grayDark"
                    android:textSize="@dimen/textSizeLarge" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/textViewTitle3"
                    android:layout_margin="5dp" />


            </RelativeLayout>


        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/relativeLayoutLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="@color/blackTransparent"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true" />
    </RelativeLayout>

</RelativeLayout>
